--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 
 <h1>Hello world!</h1>
+<div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:96px"></div>
 <p> This is the first line in my new GIT repo</p1>
 <p>A new line in our file!</p>
 
