--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:96px"></div>
 <p> This is the first line in my new GIT repo</p1>
 <p>A new line in our file!</p>
+<div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
+
 
 </body>
 </html>
